# Othello

./: CMakeLists.txt  README.md  main.cpp  othello.h
